# functional-javascript

./: .gitignore  .vimrc  Bashrack  Comments.hs  CompAr.js  Fm.dyn_hi  Fm.hs  Impossibles.hs  JS-monads-stable.cabal  M  Main.dump-hi  Main.dyn_hi  Main.dyn_o  Main.hi  Main.hs  MainBACKUP  Mane  Monad2_MonadItter_code.txt  README.md  Tasks.hs  Train  a  a!  asyncDiscussion.js  b  bebop.ts  bozo  c  change.js  code.js  comments.js  console-script  cycle-run.js  doggydew.js  functional-javascript.cabal  gg  go  gonad.js  h.js  ideas.txt  (+59 more)
.stack-work/install/x86_64-linux-nopie/lts-9.6/8.0.2/flag-cache/: Cabal-1.24.2.0-BEq1xRs6brZ2LUSxwLYtiV  SHA-1.6.4.2-6ZuKopcglGG4yoCGsd9koJ  aeson-1.2.2.0-5DInR4Gx4r83S9Ph7lsCWY  aeson-pretty-0.8.5-BTUDlxwrhTRJkM9sOm6D0Y  cmdargs-0.10.18-3NhpKz3WqDX4Iv5PFtcdYX  (+18 more)
bower_components/https/: .bower.json  https.js  readme.md
bower_components/mixpanel/: .bower.json
bower_components/ramda/: .bower.json
bower_components/websocket/lib/: websocket.js
cow/: index.html
experiments/: comp.js  fp.js  getify.js  getify_2.js
simple/: simple.cabal
src/: .babelrc  .gitignore  Choose  Fm.dyn_o  Fm.hi  LICENSE.save0  Lib.hs  M.hs  Main.hs  Main.hsss  Nain.js  Spain.hs  Test.hs  Untitled Document 1  Uses-of-splice  a  bin  bower.json  bozo  certificate.csr  certificate.pem  clean  code.js  cow  cow.js  d  file  functional-javascript.cabal  generic  hi.js  index.html  index.js  insane.js  install  keeper.js  key.pem  kill  main.js  monads-in-javascript.cabal  namesFile  (+13 more)
src/_0_0_0_0_0_WTF/: cert1.pem
src/disto/: index.html
(+3232 files in other folders)
