name:               JS-monads-stable

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.7.0.0

license-file:        LICENSE

author:              dschalk

maintainer:          https://github.com/dschalk 

build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable server
  main-is:             Main.hs
  other-modules: Fm, Tasks
  other-extensions:    OverloadedStrings, TemplateHaskell
  build-depends:       base >=4.7, text >=1.2, random >=1.1 && <1.2, directory, 
                         stm >=2.4, transformers >=0.3, wai, warp, 
                           websockets, wai-websockets, wai-app-static, file-embed, split, tuple
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

  
